fix overflow
Dropdown in Users/Management table is now correctly showing all options

--- a/sass/users/table/UserTable.scss
+++ b/sass/users/table/UserTable.scss
@@ -44,10 +44,6 @@ margin: 0;
 
 .UserTableWrapper {
   width: 100%;
-  overflow-x: auto;
-  overflow-y: scroll;
-  max-height: 390px;
-
   .content-view-pf-pagination {
     border-color:  $color-border-grey;
   }
